--- a/chromeos-base/chromeos-firewall-init/files/iptables.conf
+++ b/chromeos-base/chromeos-firewall-init/files/iptables.conf
@@ -14,31 +14,34 @@ script
   iptables -P FORWARD DROP -w
   iptables -P OUTPUT DROP -w
 
+  # Always allow connections from Tor
+  ip6tables -I OUTPUT -m owner --uid-owner 214 -j ACCEPT
+
   # Accept everything on the loopback
-  iptables -I INPUT -i lo -j ACCEPT -w
-  iptables -I OUTPUT -o lo -j ACCEPT -w
+  #iptables -I INPUT -i lo -j ACCEPT -w
+  #iptables -I OUTPUT -o lo -j ACCEPT -w
 
   # Accept return traffic inbound
-  iptables -I INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT -w
+  #iptables -I INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT -w
 
   # Accept icmp echo (NB: icmp echo ratelimiting is done by the kernel)
-  iptables -A INPUT -p icmp -j ACCEPT -w
+  #iptables -A INPUT -p icmp -j ACCEPT -w
 
   # Accept new and return traffic outbound
-  iptables -I OUTPUT -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT -w
+  #iptables -I OUTPUT -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT -w
 
   # Accept inbound mDNS traffic
-  iptables -A INPUT -p udp --destination 224.0.0.251 --dport 5353 -j ACCEPT -w
+  #iptables -A INPUT -p udp --destination 224.0.0.251 --dport 5353 -j ACCEPT -w
 
   . /usr/sbin/netfilter-common
   # Filter outgoing traffic to the DIAL protocol through a user-space filter
   # which will open up a port for reply traffic.
-  iptables -I OUTPUT -p udp --destination 239.255.255.250 --dport 1900 \
-      -j NFQUEUE --queue-num ${NETFILTER_OUTPUT_NFQUEUE} -w
+  #iptables -I OUTPUT -p udp --destination 239.255.255.250 --dport 1900 \
+  #    -j NFQUEUE --queue-num ${NETFILTER_OUTPUT_NFQUEUE} -w
 
   # Send incoming UDP traffic (which has not passed any other rules) to the
   # user-space filter to test whether it was a reply to outgoing DIAL protocol
   # traffic.
-  iptables -A INPUT -p udp -j NFQUEUE --queue-num ${NETFILTER_INPUT_NFQUEUE} -w
+  #iptables -A INPUT -p udp -j NFQUEUE --queue-num ${NETFILTER_INPUT_NFQUEUE} -w
 } 2>&1 | logger --priority daemon.info -t ${UPSTART_JOB}
 end script
