--- a/net-misc/tor/files/tor.conf
+++ b/net-misc/tor/files/tor.conf
@@ -13,7 +13,9 @@ script
   chown -R tor:tor /var/lib/tor || true
   mkdir -m 755 -p /var/log/tor
   chown -R tor:tor /var/log/tor || true
-  mkdir -m 755 -p /var/run/tor
+  mkdir -m 751 -p /var/run/tor
   chown -R tor:tor /var/run/tor || true
+  mkdir -m 755 -p /var/run/tor/socks
+  chown -R tor:tor /var/run/tor/socks || true
   exec /usr/bin/tor -f "$CONFFILE" --RunAsDaemon 1 --PidFile "$PIDFILE"
 end script
